Fix: Update name from Ahn to An in projects.json

--- a/projects.json
+++ b/projects.json
@@ -327,7 +327,7 @@
       },
       "hero": {
         "greeting": "Hey! I am",
-        "name": "Seunghwan Ahn",
+        "name": "Seunghwan An",
         "roles": ["Product Manager", "PM/PO", "6 Years Exp."]
       },
       "about": {
