포트폴리오 데이터 스키마 개선: hypothesis 필드 추가 및 프로필 이미지 로드 개선
- 6개 포트폴리오 JSON 파일에 hypothesis 필드 추가 (problem 필드 다음)
- 프로필 이미지 경로 정규화 및 에러 핸들링 개선
- avatar-box CSS 스타일 추가 (object-fit, display)

--- a/data/portfolio-06-dreamary-inapp-review.json
+++ b/data/portfolio-06-dreamary-inapp-review.json
@@ -6,6 +6,7 @@
   "hero_summary": "리뷰 획득 속도 이전 대비 3배 가속화, 도입 2개월 만에 70개 앱스토어 리뷰 확보",
   "background": "앱 런칭 초기, 앱 다운로드 결정에 큰 영향을 미치는 앱스토어 리뷰가 오픈 2달 동안 10개 미만으로 등록되어 신뢰도 확보가 시급한 상황.",
   "problem": "기존에 계획된 '기프티콘 증정 리뷰 이벤트'는 약 100만 원의 예산과 지속적인 운영 리소스가 소요되어 스타트업 입장에서 유지 비용 부담이 큼. 비용 투입 없이도 자발적이고 양질의 리뷰를 꾸준히 확보할 수 있는 지속 가능한 시스템 부재.",
+  "hypothesis": "사용자의 긍정적 경험이 정점에 도달하는 시점에 최적화된 인앱 리뷰 인터페이스를 노출한다면, 리뷰 작성률과 앱 스토어 평점이 개선될 것이다.",
   "actions": [
     "유저의 시술 만족도를 프로덕트에서 감지할 수 있는 시점인 '앱 내 시술 후기 작성 완료' 직후에 인 앱 리뷰 요청 팝업이 노출되도록 설계",
     "이벤트 참여를 위한 별도의 외부 페이지 이동이나 캡처 과정 없이, 앱 이탈 없이 즉시 별점과 리뷰를 남길 수 있도록 유저 여정 최적화",
