chore: split project data into individual JSON files and update profile

--- a/data/portfolio-06-dreamary-inapp-review.json
+++ b/data/portfolio-06-dreamary-inapp-review.json
@@ -2,23 +2,36 @@
   "id": "dreamary-inapp-review",
   "company": "Dreamary",
   "period": "2021.05 - 2021.06",
-  "title": "인 앱 리뷰 요청 기능 구현을 통한 양질의 앱스토어 리뷰 확보",
-  "hero_summary": "리뷰 획득 속도 이전 대비 3배 가속화, 도입 2개월 만에 70개 앱스토어 리뷰 확보",
-  "background": "앱 런칭 초기, 앱 다운로드 결정에 큰 영향을 미치는 앱스토어 리뷰가 오픈 2달 동안 10개 미만으로 등록되어 신뢰도 확보가 시급한 상황.",
-  "problem": "기존에 계획된 '기프티콘 증정 리뷰 이벤트'는 약 100만 원의 예산과 지속적인 운영 리소스가 소요되어 스타트업 입장에서 유지 비용 부담이 큼. 비용 투입 없이도 자발적이고 양질의 리뷰를 꾸준히 확보할 수 있는 지속 가능한 시스템 부재.",
-  "hypothesis": "사용자의 긍정적 경험이 정점에 도달하는 시점에 최적화된 인앱 리뷰 인터페이스를 노출한다면, 리뷰 작성률과 앱 스토어 평점이 개선될 것이다.",
-  "actions": [
-    "유저의 시술 만족도를 프로덕트에서 감지할 수 있는 시점인 '앱 내 시술 후기 작성 완료' 직후에 인 앱 리뷰 요청 팝업이 노출되도록 설계",
-    "이벤트 참여를 위한 별도의 외부 페이지 이동이나 캡처 과정 없이, 앱 이탈 없이 즉시 별점과 리뷰를 남길 수 있도록 유저 여정 최적화",
-    "오프라인 시술 직후가 아닌, 유저가 스스로 긍정적인 경험을 기록(후기 작성)한 심리적 만족 시점을 타겟팅하여 양질의 리뷰 유도"
-  ],
-  "results": [
-    "리뷰 획득 속도 이전 대비 3배 가속화 (도입 후 2개월 만에 70개의 앱스토어 리뷰 확보)",
-    "12개월 동안 누적 570개의 인 앱 리뷰 획득 및 평균 평점 4.7의 고득점 유지",
-    "앱스토어 방문자 수 증가(월 9천 → 2.4만) 상황에서도 높은 평점과 양질의 리뷰를 바탕으로 30% 내외의 안정적인 전환율(CVR) 방어에 기여"
-  ],
-  "lesson_learned": [
-    "유저에게 특정 행동을 요청할 때는 심리적/물리적 장벽(Hurdle)을 제거하기 위해 단계를 최소화하는 것이 가장 중요함",
-    "오프라인 중심 서비스일수록 유저가 제품에 만족한 순간을 프로덕트 내 데이터로 포착해낼 수 있는 '만족 지표(Aha-moment)' 설계가 필수적임"
-  ]
+  "title": "인 앱 앱스토어 리뷰 요청 기능 구현",
+  "hero_summary": "리뷰 획득 속도 이전 대비 3배 빨라짐(인앱 리뷰 요청 구현 직후 2개월 동안 앱스토어 리뷰 70개 획득).",
+  "details": {
+    "background": [
+      "드리머리는 신생 앱이고, 앱 다운로드에 영향을 미치는 양질의 앱스토어 리뷰가 오픈 2달 동안 10개 미만으로 등록된 상황."
+    ],
+    "problem": [
+      "회사에선 이 문제를 해결하기 위해 약 100만 원의 예산으로 앱스토어 리뷰 작성 기프티콘 제공 이벤트를 계획.",
+      "비용 및 리소스 자원이 부족한 스타트업 입장에서 이벤트를 지속적으로 운영하는 것은 부담.",
+      "즉, 비용 및 리소스 투입을 최소화 하면서 양질의 리뷰를 얻을 수 있는 방법이 부재한 문제 존재."
+    ],
+    "hypothesis": [
+      "리뷰 이벤트는 유저가 수행해야 할 단계(리뷰 제출 → 스크린샷 → 이벤트 제출)가 많아 참여율이 저조할 것.",
+      "또한 이벤트를 진행하면, 이벤트 없이는 유저들이 리뷰를 남기지 않을 것.",
+      "유저가 서비스에 만족한 순간에 최소한의 액션으로 리뷰를 남길 수 있다면, 자연스럽게 양질의 리뷰를 얻을 수 있을 것.",
+      "유저는 서비스에 만족한다면 앱에서 시술 리뷰를 남길 것."
+    ],
+    "actions": [
+      "유저가 앱 내 시술 후기 작성을 완료한 시점에 인앱 리뷰 요청 팝업 노출.",
+      "오프라인으로 진행되는 시술 직후에는 유저의 만족 여부를 알 수 없음.",
+      "따라서 유저의 시술 만족 여부를 프로덕트에서 알 수 있는 방법으로 리뷰 작성 시점을 채택."
+    ],
+    "results": [
+      "리뷰 획득 속도 이전 대비 3배 빨라짐(인앱 리뷰 요청 구현 직후 2개월 동안 앱스토어 리뷰 70개 획득).",
+      "12개월 동안 누적 570개의 인앱 리뷰 획득 및 평점은 4.7을 유지.",
+      "퍼포먼스 마케팅으로 앱스토어 방문 수치는 월 9천 회에서 2만 4천회까지 2.5배 증가했지만, 전환율은 30% 내외 유지."
+    ],
+    "lesson_learned": [
+      "고객에게 특정 행동을 요청할 때는 고객이 행동해야 하는 단계를 최소화 해야 함.",
+      "고객이 서비스에 만족한 순간을 프로덕트에서 측정할 수 있는 퍼널 혹은 기능이 필요함."
+    ]
+  }
 }
